terraform/vpc.tf
provider "aws" {
	region = "ap-southeast-1"
}

resource "aws_vpc" "main" {
	cidr_block = "172.23.0.0/16"
	tags {
		Name = "treadmill"	
	}
}

resource "aws_subnet" "main" {
	vpc_id = "${aws_vpc.main.id}"
	cidr_block = "172.23.1.0/24"
	availability_zone = "ap-southeast-1a"
	tags {
		Name = "treadmill"
	}	
}

resource "aws_internet_gateway" "gw" {
	vpc_id = "${aws_vpc.main.id}"
}

resource "aws_route_table" "r" {
	vpc_id = "${aws_vpc.main.id}"
	route {
		cidr_block = "0.0.0.0/0"
		gateway_id = "${aws_internet_gateway.gw.id}"
	}
}

resource "aws_route_table_association" "a" {
	subnet_id = "${aws_subnet.main.id}"
	route_table_id = "${aws_route_table.r.id}"
}
